--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <title>multi touch</title>
     <script src="libraries/p5.js" type="text/javascript"></script>
 
@@ -10,7 +11,7 @@
 
     <script src="sketch.js" type="text/javascript"></script>
 
-    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
+    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} html, body {overflow-x: hidden;} body { position: relative} </style>
   </head>
   <body>
   </body>
